[metadata]
name = Yas
summary = Yet Another Slack bot
description-file = README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    yas
data_files =
    etc/yas/handlers =
        etc/yas/handlers/how_to_use_handlers.rst

[entry_points]
console_scripts =
    yas = yas.core.application:run
